finished class (before 10/10)

--- a/classwork/CS01-InClass.htm
+++ b/classwork/CS01-InClass.htm
@@ -17,6 +17,7 @@
 <p>I decided to come to Babson College because I have always been interested in entrepreneurship and business administration. Nowadays I'm focusing my Babson education in Marketing, which is one of my current passions.</p>
 <p>My favorite sport is <a href="https://www.fifa.com/">soccer</a>.</p>
 <img src="https://images.complex.com/complex/images/c_limit,w_680/fl_lossy,pg_1,q_auto/cnsklkjuhdgdz93atdin/netflix-logo" alt="netflix logo" title="netflix logo"width= "300">
+<p><a href= "C:\Users\mdotta1\Desktop\WebTech\classwork\low.htm">My Work in WebTech</a></p>
 <hr/>
 </body>
-</html>"
+</html>
