--- a/classwork/CS14-Quiz.html
+++ b/classwork/CS14-Quiz.html
@@ -36,7 +36,7 @@
                 background-color: red;
             }
         </style>
-        <script>
+        <script type="text/javascript">
         
         function change(){
         document.getElementById("green-circle").innerHTML="You just clicked green";
