--- a/classwork/low.htm
+++ b/classwork/low.htm
@@ -61,6 +61,19 @@
 
     <h3><a href="http://www.anitadotta.com"> My Domain </a></h3>
 
+    <h3><a href="CS12-InClass.html">CS12-InClass</a></h3>
+
+    <h3><A HREF="CS13-InClass.htm">CS13-InClass</A></h3>
+
+    <h3><a href="CS14-InClass1.htm">CS14-InClass 1</a></H3>
+    
+    <h3><a href="CS14-InClass2.htm">CS14-InClass 2</a></H3>
+
+    <h3><a href="CS14-Quiz.html">CS14-Quiz</a></H3>
+    
+    <h3><a href="CS15-InClass1.htm">CS15-InClass 1</a></H3>
+
+    <h3><a href="CS15-InClass2.htm">CS15-InClass 2</a></H3>
 
 
     <hr/>
