--- a/project/portfolio.htm
+++ b/project/portfolio.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Project</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" type="text/css" href="project.css">        
         
        
@@ -62,6 +62,9 @@
                 <tr>
                     <td><a class="nav" href="contact.htm">CONTACT ME</td>
                     <td><a class="nav" href="map.htm">SITE MAP</td>
+                    <td><a class="nav" href="credits.htm">CREDITS</a></td>
+                    <br>
+                    <br>
                 </tr>
             </form>
         </div>
